[gd_scene load_steps=4 format=3 uid="uid://b7h2jklp5rfgx"]

[ext_resource type="Script" path="res://systems/SimulationManager.gd" id="1_sim"]
[ext_resource type="Script" path="res://ui/ModernUI.gd" id="2_ui"]
[ext_resource type="Script" path="res://Main.gd" id="3_main"]

[node name="Main" type="Node2D"]
script = ExtResource("3_main")

[node name="SimulationManager" type="Node" parent="."]
script = ExtResource("1_sim")

[node name="SolarSystem" type="Node2D" parent="."]

[node name="ProbeManager" type="Node2D" parent="."]

[node name="ResourceManager" type="Node2D" parent="."]

[node name="ParticleManager" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_ui")

[node name="HUD" type="Control" parent="UI"]

[node name="ProbeListPanel" type="Panel" parent="UI"]

[node name="SelectedProbePanel" type="Panel" parent="UI"]

[node name="SystemStatsPanel" type="Panel" parent="UI"]

[node name="DebugPanel" type="Panel" parent="UI"]

[node name="Background" type="ParallaxBackground" parent="."]

[node name="StarField1" type="ParallaxLayer" parent="Background"]

[node name="StarField2" type="ParallaxLayer" parent="Background"]

[node name="StarField3" type="ParallaxLayer" parent="Background"]